--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,20 +20,20 @@ html(lang='en')
                 a(href='/catalog/books') All books
               li
                 a(href='/catalog/authors') All authors
-              li
-                a(href='/catalog/genres') All genres
-              li
-                a(href='/catalog/bookinstances') All book-instances
+              // li
+              //   a(href='/catalog/genres') All genres
+              // li
+              //   a(href='/catalog/bookinstances') All book-instances
               li
                 hr
               li
                 a(href='/catalog/author/create') Create new author
-              li
-                a(href='/catalog/genre/create') Create new genre
+              // li
+              //   a(href='/catalog/genre/create') Create new genre
               li
                 a(href='/catalog/book/create') Create new book
-              li
-                a(href='/catalog/bookinstance/create') Create new book instance (copy)
+              // li
+              //   a(href='/catalog/bookinstance/create') Create new book instance (copy)
 
         div(class='col-sm-10')
           block content
